--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
-
 /* Reset & Base */
 * {
   margin: 0;
@@ -114,7 +112,14 @@ li {
   color: #555;
 }
 
-/* --- Education entries --- */
+/* --- Research Interest List */
+.research-interest-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* --- Education Entries --- */
 .education-entry {
   margin-bottom: 1em;
 }
